# pkg/api/v1/op-service.pb.gw.go
@@ -33,8 +33,8 @@ var _ = utilities.NewDoubleArray
 var _ = descriptor.ForMessage
 var _ = metadata.Join
 
-func request_ToDoService_Create_0(ctx context.Context, marshaler runtime.Marshaler, client ToDoServiceClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
-	var protoReq CreateRequest
+func request_OpService_NewUserRegistration_0(ctx context.Context, marshaler runtime.Marshaler, client OpServiceClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq NewUserRegistrationRequest
 	var metadata runtime.ServerMetadata
 
 	newReader, berr := utilities.IOReaderFactory(req.Body)
@@ -45,13 +45,13 @@ func request_ToDoService_Create_0(ctx context.Context, marshaler runtime.Marshal
 		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
 	}
 
-	msg, err := client.Create(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
+	msg, err := client.NewUserRegistration(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
 	return msg, metadata, err
 
 }
 
-func local_request_ToDoService_Create_0(ctx context.Context, marshaler runtime.Marshaler, server ToDoServiceServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
-	var protoReq CreateRequest
+func local_request_OpService_NewUserRegistration_0(ctx context.Context, marshaler runtime.Marshaler, server OpServiceServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq NewUserRegistrationRequest
 	var metadata runtime.ServerMetadata
 
 	newReader, berr := utilities.IOReaderFactory(req.Body)
@@ -62,18 +62,18 @@ func local_request_ToDoService_Create_0(ctx context.Context, marshaler runtime.M
 		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
 	}
 
-	msg, err := server.Create(ctx, &protoReq)
+	msg, err := server.NewUserRegistration(ctx, &protoReq)
 	return msg, metadata, err
 
 }
 
-// RegisterToDoServiceHandlerServer registers the http handlers for service ToDoService to "mux".
-// UnaryRPC     :call ToDoServiceServer directly.
+// RegisterOpServiceHandlerServer registers the http handlers for service OpService to "mux".
+// UnaryRPC     :call OpServiceServer directly.
 // StreamingRPC :currently unsupported pending https://github.com/grpc/grpc-go/issues/906.
-// Note that using this registration option will cause many gRPC library features to stop working. Consider using RegisterToDoServiceHandlerFromEndpoint instead.
-func RegisterToDoServiceHandlerServer(ctx context.Context, mux *runtime.ServeMux, server ToDoServiceServer) error {
+// Note that using this registration option will cause many gRPC library features to stop working. Consider using RegisterOpServiceHandlerFromEndpoint instead.
+func RegisterOpServiceHandlerServer(ctx context.Context, mux *runtime.ServeMux, server OpServiceServer) error {
 
-	mux.Handle("POST", pattern_ToDoService_Create_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+	mux.Handle("POST", pattern_OpService_NewUserRegistration_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
 		ctx, cancel := context.WithCancel(req.Context())
 		defer cancel()
 		var stream runtime.ServerTransportStream
@@ -84,7 +84,7 @@ func RegisterToDoServiceHandlerServer(ctx context.Context, mux *runtime.ServeMux
 			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
 			return
 		}
-		resp, md, err := local_request_ToDoService_Create_0(rctx, inboundMarshaler, server, req, pathParams)
+		resp, md, err := local_request_OpService_NewUserRegistration_0(rctx, inboundMarshaler, server, req, pathParams)
 		md.HeaderMD, md.TrailerMD = metadata.Join(md.HeaderMD, stream.Header()), metadata.Join(md.TrailerMD, stream.Trailer())
 		ctx = runtime.NewServerMetadataContext(ctx, md)
 		if err != nil {
@@ -92,16 +92,16 @@ func RegisterToDoServiceHandlerServer(ctx context.Context, mux *runtime.ServeMux
 			return
 		}
 
-		forward_ToDoService_Create_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+		forward_OpService_NewUserRegistration_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
 
 	})
 
 	return nil
 }
 
-// RegisterToDoServiceHandlerFromEndpoint is same as RegisterToDoServiceHandler but
+// RegisterOpServiceHandlerFromEndpoint is same as RegisterOpServiceHandler but
 // automatically dials to "endpoint" and closes the connection when "ctx" gets done.
-func RegisterToDoServiceHandlerFromEndpoint(ctx context.Context, mux *runtime.ServeMux, endpoint string, opts []grpc.DialOption) (err error) {
+func RegisterOpServiceHandlerFromEndpoint(ctx context.Context, mux *runtime.ServeMux, endpoint string, opts []grpc.DialOption) (err error) {
 	conn, err := grpc.Dial(endpoint, opts...)
 	if err != nil {
 		return err
@@ -121,23 +121,23 @@ func RegisterToDoServiceHandlerFromEndpoint(ctx context.Context, mux *runtime.Se
 		}()
 	}()
 
-	return RegisterToDoServiceHandler(ctx, mux, conn)
+	return RegisterOpServiceHandler(ctx, mux, conn)
 }
 
-// RegisterToDoServiceHandler registers the http handlers for service ToDoService to "mux".
+// RegisterOpServiceHandler registers the http handlers for service OpService to "mux".
 // The handlers forward requests to the grpc endpoint over "conn".
-func RegisterToDoServiceHandler(ctx context.Context, mux *runtime.ServeMux, conn *grpc.ClientConn) error {
-	return RegisterToDoServiceHandlerClient(ctx, mux, NewToDoServiceClient(conn))
+func RegisterOpServiceHandler(ctx context.Context, mux *runtime.ServeMux, conn *grpc.ClientConn) error {
+	return RegisterOpServiceHandlerClient(ctx, mux, NewOpServiceClient(conn))
 }
 
-// RegisterToDoServiceHandlerClient registers the http handlers for service ToDoService
-// to "mux". The handlers forward requests to the grpc endpoint over the given implementation of "ToDoServiceClient".
-// Note: the gRPC framework executes interceptors within the gRPC handler. If the passed in "ToDoServiceClient"
+// RegisterOpServiceHandlerClient registers the http handlers for service OpService
+// to "mux". The handlers forward requests to the grpc endpoint over the given implementation of "OpServiceClient".
+// Note: the gRPC framework executes interceptors within the gRPC handler. If the passed in "OpServiceClient"
 // doesn't go through the normal gRPC flow (creating a gRPC client etc.) then it will be up to the passed in
-// "ToDoServiceClient" to call the correct interceptors.
-func RegisterToDoServiceHandlerClient(ctx context.Context, mux *runtime.ServeMux, client ToDoServiceClient) error {
+// "OpServiceClient" to call the correct interceptors.
+func RegisterOpServiceHandlerClient(ctx context.Context, mux *runtime.ServeMux, client OpServiceClient) error {
 
-	mux.Handle("POST", pattern_ToDoService_Create_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+	mux.Handle("POST", pattern_OpService_NewUserRegistration_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
 		ctx, cancel := context.WithCancel(req.Context())
 		defer cancel()
 		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
@@ -146,14 +146,14 @@ func RegisterToDoServiceHandlerClient(ctx context.Context, mux *runtime.ServeMux
 			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
 			return
 		}
-		resp, md, err := request_ToDoService_Create_0(rctx, inboundMarshaler, client, req, pathParams)
+		resp, md, err := request_OpService_NewUserRegistration_0(rctx, inboundMarshaler, client, req, pathParams)
 		ctx = runtime.NewServerMetadataContext(ctx, md)
 		if err != nil {
 			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
 			return
 		}
 
-		forward_ToDoService_Create_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+		forward_OpService_NewUserRegistration_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
 
 	})
 
@@ -161,9 +161,9 @@ func RegisterToDoServiceHandlerClient(ctx context.Context, mux *runtime.ServeMux
 }
 
 var (
-	pattern_ToDoService_Create_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"v1", "todo"}, "", runtime.AssumeColonVerbOpt(true)))
+	pattern_OpService_NewUserRegistration_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2}, []string{"api", "v1", "NewUserRegistration"}, "", runtime.AssumeColonVerbOpt(true)))
 )
 
 var (
-	forward_ToDoService_Create_0 = runtime.ForwardResponseMessage
+	forward_OpService_NewUserRegistration_0 = runtime.ForwardResponseMessage
 )
